--- a/index.html
+++ b/index.html
@@ -5,37 +5,47 @@
 <title>Anniversary Countdown</title>
 <style>
     body {
-		background: linear-gradient(135deg, #ffe6f0, #fffde7, #e0f7fa, #ffffff);
-		background-size: 400% 400%;
-		animation: gradientShift 12s ease infinite;
+        background: linear-gradient(135deg, #ffe6f0, #fffde7, #e0f7fa, #ffffff);
+        background-size: 400% 400%;
+        animation: gradientShift 12s ease infinite;
         font-family: 'Segoe UI', sans-serif;
         color: #333;
         margin: 0;
         height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content: center; /* vertical center */
-        align-items: center;     /* horizontal center */
+        justify-content: center;
+        align-items: center;
     }
 
-	.top-right-embed {
+    .top-right-embed {
         position: absolute;
         top: 20px;
         right: 20px;
         box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-        z-index: 10; 
+        z-index: 10;
+        border-radius: 20px;
+        overflow: hidden;
     }
-	
+
+    iframe.top-right-embed {
+        width: 320px;
+        height: 380px;
+        border: none;
+    }
+
     h1 {
         margin-bottom: 20px;
         text-align: center;
     }
+
     .cards {
         display: flex;
         flex-direction: column;
         gap: 30px;
         align-items: center;
     }
+
     .card {
         background: linear-gradient(145deg, #fddde6, #f8f9d2, #E0FFFF, #fddde6);
         padding: 30px;
@@ -44,17 +54,20 @@
         min-width: 300px;
         text-align: center;
     }
+
     .title {
         font-size: 1.4em;
         font-weight: bold;
         color: #7a3eb1;
         margin-bottom: 15px;
     }
+
     .count {
         font-size: 1.2em;
         margin: 10px 0;
         color: #444;
     }
+
     .special {
         font-size: 1.1em;
         margin-top: 15px;
@@ -67,8 +80,10 @@
 
 <h1>💖 Our Special Days 💖</h1>
 
-<iframe data-testid="embed-iframe" class="top-right-embed" style="border-radius:12px" src="https://open.spotify.com/embed/artist/7n2Ycct7Beij7Dj7meI4X0?utm_source=generator" width="300px" height="300px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-	
+<div class="top-right-embed">
+    <iframe src="https://open.spotify.com/embed/artist/7n2Ycct7Beij7Dj7meI4X0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
 <div class="cards">
     <div class="card">
         <div class="title">OG ANNIVERSARY (26 March 2020)</div>
@@ -110,7 +125,7 @@ function updateCountdowns() {
     let ogDiff = calcAnniversary(ogDate, today);
     document.getElementById('ogCount').textContent =
         `${ogDiff.years} years, ${ogDiff.months} months, ${ogDiff.days} days since OG day 💕`;
-    
+
     if (today.getDate() === 26) {
         document.getElementById('ogSpecial').textContent =
             `🎉 Congratulations on your ${ogDiff.years} years ${ogDiff.months} months anniversary!`;
@@ -133,4 +148,3 @@ updateCountdowns();
 
 </body>
 </html>
-
